# AstraClassificationOwain

./: .env.example  .gitignore  PLAN.md  README.md  RESULTS.md  pyproject.toml  report.tex
experiments/: articulate_survivors.py  articulation_rates.py  check_rules.py  confounds_c2_zeroshot.py  confounds_c3_ci.py  confounds_c7_prior_articulation.py  decorrelation.py  dump_examples.py  faithfulness_first_letter.py  faithfulness_first_word_verb.py  gemma_classify.py  gemma_counterfactual.py  gemma_probe.py  gemma_probe_figure.py  hunt_ae_counterfactual.py  isolation_probe.py  make_figures.py  proxy_checks.py  reasoning_classification.py  reliability_first_letter.py  scale_fewshot.py  smoke_test.py  sweep_classify.py
src/articulation/: __init__.py  cache.py  controls.py  inputs.py  model.py
src/articulation/rules/: __init__.py  character.py  composite.py  confounded.py  hunt.py  lexical.py  syntactic.py
