[project]
name = "astra-articulation"
version = "0.1.0"
description = "Can an LLM articulate the classification rules it learns in-context?"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "scipy>=1.11",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# Open-weights replication + linear probes. Heavy; install with `uv sync --extra gpu`.
# On the H200, uv will resolve the CUDA torch wheel; on the Mac it resolves the MPS one.
gpu = [
    "torch>=2.3",
    "transformers>=4.44",
    "accelerate>=0.33",
    "scikit-learn>=1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/articulation"]
